--- a/src/app/register/register.component.scss
+++ b/src/app/register/register.component.scss
@@ -1,7 +1,7 @@
 .container{
     display: flex;
     flex-direction: column;
-    margin-top: 20vh; 
+    margin-top: 5vh; 
     justify-content: center;
     width: 60vw;
     background-color:rgba(101,181,255,0.2);
@@ -21,6 +21,11 @@
    .row-div{
     display: flex;
     flex-direction: row;
+   }
+   .button{
+    display: flex;
+    justify-content: center;
+    margin-top: 4vh;
    }
   
  
