--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -12,8 +12,8 @@
             <label for="password">password</label>
             <input type="password" class="form-control" id="password" name="password" placeholder="password" [(ngModel)]="formData.password">
         </div>
-        <span>create an account<a href="/register">SignUp</a></span>
-        <div class="form-group">
+        <span>create an account?<a href="/register">SignUp</a></span>
+        <div class="form-button">
             <button type="submit" class="btn btn-primary" id="button" (click)="loginMethod()">Login</button>
         </div>
     </form>
