--- a/src/app/register/register.component.scss
+++ b/src/app/register/register.component.scss
@@ -4,7 +4,7 @@
     margin-top: 5vh; 
     justify-content: center;
     width: 60vw;
-    background-color:rgba(101,181,255,0.2);
+    background-color:#FFFFF7;
     padding: 10vh;
     border-radius: 10px;
 
