--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,27 +1,123 @@
 <div>
     <div>
         <nav class="navbar navbar-light bg-light">
-            <span class="navbar-brand mb-0 ml-5 h1">Admin</span>
+
+            <span class="navbar-brand mb-0 ml-5 h1">Shop Manager</span>
         </nav>
     </div>
 
     <div class="add-button-container">
-        <button type="button" class="btn btn-light btn-lg btn-block">Add New Shop</button>     </div>
+        <button type="button" class="btn btn-light btn-lg btn-block">
+            <mat-icon>
+                library_add
+            </mat-icon>
+            Add New Shop</button>
+    </div>
 
     <div class="container">
-        <div *ngFor="let card of cards" class="card">
+        <div *ngFor="let card of cards" class="card"
+            [ngStyle]="{ 'background-color': viewMore ? 'rgba(255, 255, 247, 0.5)' : ''}">
             <div class="card-body">
+
                 <div class="image">
                     <img src="https://cdn-icons-png.flaticon.com/512/3443/3443338.png" alt="" class="shop-icon">
                 </div>
                 <div class="details">
                     <h5 class="card-title">Shop Title</h5>
                     <p class="card-text">City</p>
-                    <button type="button" class="btn btn-dark">View Shop Details</button>
+                    <button type="button" class="btn btn-dark" (click)="manageView()">View Shop Details</button>
                 </div>
 
             </div>
         </div>
+    </div>
+
+
+
+
+    <!-- View more details card -->
+    <div *ngIf="viewMore">
+
+
+
+        <div class="view-more-card-container">
+
+            <div class="view-more-icons">
+                <div>
+                    <mat-icon>
+                        <span class="material-symbols-outlined" (click)="handleSubmitButton()" (click)="handleEditButton()">
+                            edit
+                        </span>
+                    </mat-icon>
+                </div>
+
+                <div>
+                    <mat-icon>
+                        <span class="material-symbols-outlined" (click)="manageView()">
+                            close
+                        </span>
+                    </mat-icon>
+                </div>
+
+
+            </div>
+
+            <div class="view-more-image-container">
+                <img src="https://cdn-icons-png.flaticon.com/512/3443/3443338.png" alt="" class="view-more-shop-image">
+            </div>
+
+            <div class="view-more-form1-container">
+                <form class="example-form">
+                    <div>
+                        <mat-form-field class="example-full-width">
+                            <mat-label>Shop Name</mat-label>
+                            <input matInput placeholder="" value="Pepper" [readonly]="readOnlyMode">
+                        </mat-form-field>
+                    </div>
+
+                    <div>
+                        <mat-form-field class="example-full-width">
+                            <mat-label>Shop Id</mat-label>
+                            <input matInput placeholder="" value="61930918" [readonly]="readOnlyMode">
+                        </mat-form-field>
+                    </div>
+                </form>
+            </div>
+
+            <div class="view-more-form2-container">
+
+                <form class="example-form2">
+                    <div>
+                        <mat-form-field class="example-full-width-form2">
+                            <mat-label>City</mat-label>
+                            <input matInput placeholder="" value="Trivandrum" [readonly]="readOnlyMode">
+                        </mat-form-field>
+                    </div>
+
+                    <div>
+                        <mat-form-field class="example-full-width-form2">
+                            <mat-label>Address</mat-label>
+                            <input matInput placeholder="" value="Gayathri Building, Technopark phase I" [readonly]="readOnlyMode">
+                        </mat-form-field>
+                    </div>
+
+                    <div>
+                        <mat-form-field class="example-full-width-form2">
+                            <mat-label>Contact</mat-label>
+                            <input matInput placeholder=""  value="83027398723" [readonly]="readOnlyMode">
+                        </mat-form-field>
+                    </div>
+                </form>
+
+            </div>
+
+            <div *ngIf="submitButton" class="view-more-submit">
+                <button type="button" class="btn btn-dark">Submit</button>
+            </div>
+
+        </div>
+
+
     </div>
 
 </div>
