--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -30,113 +30,29 @@
 
     <div class="container">
         <div *ngFor="let shop of shopList" class="card"
-            [ngStyle]="{ 'background-color': viewMore || addNewShop ? 'rgba(255, 255, 247, 0.5)' : ''}">
+            [ngStyle]="{ 'background-color': addNewShop || isClosed ? 'rgba(255, 255, 247, 0.5)' : ''}">
             <div class="card-body">
 
                 <div class="image">
-                    <img src="../../assets/pokemonSearch.png" alt="" class="shop-icon">
+                    <img src="`http://127.0.0.1:8000 ${shop.image}`" alt="" class="shop-icon">
                 </div>
                 <div class="details">
                     <h5 class="card-title">{{shop.name}}</h5>
                     <p class="card-text">{{shop.city}}</p>
-                    <button type="button" class="btn btn-dark" (click)="manageView()">View Shop Details</button>
+                    <button type="button" class="btn btn-dark" (click)="handleViewMoreComponent(shop)" (click)="handleViewMoreButton($event)" >View Shop Details</button>
                 </div>
 
             </div>
             <!-- View more -->
 
-
-
+            <div *ngIf="isClosed">
+               
+                <app-more-details-card [data]="singleShop" (handleIsClosed)="handleViewMoreButton($event)"></app-more-details-card>
+            </div>
 
 
             <!-- View more details card -->
-            <div *ngIf="viewMore">
-
-
-
-                <div class="view-more-card-container">
-
-                    <div class="view-more-icons">
-                        <div>
-                            <mat-icon>
-                                <span class="material-symbols-outlined" (click)="handleSubmitButton()"
-                                    (click)="handleEditButton()">
-                                    edit
-                                </span>
-                            </mat-icon>
-                        </div>
-
-                        <div>
-                            <mat-icon>
-                                <span class="material-symbols-outlined" (click)="manageView()">
-                                    close
-                                </span>
-                            </mat-icon>
-                        </div>
-
-
-                    </div>
-
-                    <div class="view-more-image-container">
-                        <img src="https://cdn-icons-png.flaticon.com/512/3443/3443338.png" alt=""
-                            class="view-more-shop-image">
-                    </div>
-
-                    <div class="view-more-form1-container">
-                        <form class="example-form">
-                            <div>
-                                <mat-form-field class="example-full-width">
-                                    <mat-label>Shop Name</mat-label>
-                                    <input matInput placeholder="" value={{shop.name}} [readonly]="readOnlyMode">
-                                </mat-form-field>
-                            </div>
-
-                            <div>
-                                <mat-form-field class="example-full-width">
-                                    <mat-label>Shop Id</mat-label>
-                                    <input matInput placeholder="" value={{this.shopList.indexOf(shop)}}
-                                        [readonly]="readOnlyMode">
-                                </mat-form-field>
-                            </div>
-                        </form>
-                    </div>
-
-                    <div class="view-more-form2-container">
-
-                        <form class="example-form2">
-                            <div>
-                                <mat-form-field class="example-full-width-form2">
-                                    <mat-label>City</mat-label>
-                                    <input matInput placeholder="" value="Trivandrum" [readonly]="readOnlyMode">
-                                </mat-form-field>
-                            </div>
-
-                            <div>
-                                <mat-form-field class="example-full-width-form2">
-                                    <mat-label>Address</mat-label>
-                                    <input matInput placeholder="" value="Gayathri Building, Technopark phase I"
-                                        [readonly]="readOnlyMode">
-                                </mat-form-field>
-                            </div>
-
-                            <div>
-                                <mat-form-field class="example-full-width-form2">
-                                    <mat-label>Contact</mat-label>
-                                    <input matInput placeholder="" value="83027398723" [readonly]="readOnlyMode">
-                                </mat-form-field>
-                            </div>
-                        </form>
-
-                    </div>
-
-                    <div *ngIf="submitButton" class="view-more-submit">
-                        <button type="button" class="btn btn-dark">Submit</button>
-                    </div>
-
-                </div>
-
-
-            </div>
+         
 
         </div>
     </div>
@@ -160,8 +76,8 @@
 
             <div class="addShop-file-input-container">
 
-                <input placeholder="" type="file" value="" class="addShop-file-input" [(ngModel)]="formData.image"
-                    name="image">
+                <input placeholder="" type="file" value="" class="addShop-file-input"
+                    name="image" (change)="handleImageInput($event)">
 
             </div>
 
