--- a/src/app/more-details-card/more-details-card.component.html
+++ b/src/app/more-details-card/more-details-card.component.html
@@ -26,7 +26,7 @@
         </div>
 
         <div class="view-more-image-container">
-            <img src="../../assets/OTT_HnJDOcp.png" alt=""
+            <img src="http://127.0.0.1:8000{{data.image}}" alt=""
                 class="view-more-shop-image">
         </div>
 
@@ -35,15 +35,15 @@
                 <div>
                     <mat-form-field class="example-full-width">
                         <mat-label>Shop Name</mat-label>
-                        <input matInput placeholder="" value={{data.name}} [readonly]="readOnlyMode">
+                        <input matInput placeholder="" value={{data.name}} [readonly]="readOnlyMode" class="form1-input" >
                     </mat-form-field>
                 </div>
 
                 <div>
                     <mat-form-field class="example-full-width">
                         <mat-label>Shop Id</mat-label>
-                        <input matInput placeholder="" value=""
-                            [readonly]="readOnlyMode">
+                        <input matInput placeholder="" value={{data.id}}
+                            [readonly]="readOnlyMode" class="form1-input">
                     </mat-form-field>
                 </div>
             </form>
@@ -78,7 +78,7 @@
         </div>
 
         <div *ngIf="submitButton" class="view-more-submit">
-            <button type="button" class="btn btn-dark">Submit</button>
+            <button type="button" class="btn btn-dark">Update</button>
         </div>
 
     </div>
