--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -11,7 +11,7 @@
     margin: 10px; 
     // background-color: #03A9F4;
     background-color: #FFFFF7 ;
-    min-width: 350px;
+    min-width: 390px;
     
 }
 .card-body{
@@ -19,6 +19,7 @@
     justify-content: space-between;
     grid-template-columns: 1fr 2fr;
     align-items: center;
+    
 }
 
 .card-text{
@@ -37,9 +38,18 @@
 display: flex;
 align-items: flex-end;
 }
-.details{
-    display: grid;
+.details-div{
+    display: flex;
     justify-content: center;
+}
+.details{
+    display: flex;
+    flex-direction: column;
+    justify-content:center ;
+    margin-left: 20px;
+    align-items: flex-start;
+    max-width: 200px;
+    
 }
 .navbar{
     position: sticky;
@@ -217,5 +227,17 @@ align-items: flex-end;
     justify-content: center;
   
 }
+.View-More-button{
+width: 155px;
+}
+
+.image{
+    width: 160px;
+}
+.shop-icon{
+    object-fit: cover;
+}
+
+
 
 
