--- a/src/app/more-details-card/more-details-card.component.scss
+++ b/src/app/more-details-card/more-details-card.component.scss
@@ -212,4 +212,7 @@ align-items: flex-end;
     display: flex;
     justify-content: flex-end;
 }
-
+.edit-image-p{
+    font-size: 15px;
+    cursor: pointer;
+}
