--- a/src/app/more-details-card/more-details-card.component.html
+++ b/src/app/more-details-card/more-details-card.component.html
@@ -85,7 +85,7 @@
                 <div>
                     <mat-form-field class="example-full-width-form2">
                         <mat-label>Contact</mat-label>
-                        <input matInput placeholder="" value={{data.phone}} [readonly]="readOnlyMode" name="phone" #phone>
+                        <input matInput placeholder=""  type="number" class="no-spinners" value={{data.phone}} [readonly]="readOnlyMode" name="phone" #phone>
                     </mat-form-field>
                 </div>
             </form>
