--- a/src/app/more-details-card/more-details-card.component.scss
+++ b/src/app/more-details-card/more-details-card.component.scss
@@ -216,3 +216,10 @@ align-items: flex-end;
     font-size: 15px;
     cursor: pointer;
 }
+
+
+.no-spinners::-webkit-inner-spin-button,
+.no-spinners::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
