--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div>
     <div>
-        <nav class="navbar navbar-light bg-light">
+        <nav class="navbar  navbar">
             <div class="brand-div">
                 <mat-icon>
                     <span class="material-symbols-outlined">
@@ -30,7 +30,7 @@
     </div>
 
     <div class="container">
-        <div *ngFor="let shop of shopList" class="card"
+        <div *ngFor="let shop of fetchedData.results" class="card"
             [ngStyle]="{ 'background-color': addNewShop || isClosed ? 'rgba(255, 255, 247, 0.5)' : ''}">
             <div class="card-body">
 
@@ -119,7 +119,7 @@
                     <div>
                         <mat-form-field class="addShop-form2-feild">
                             <mat-label>Contact</mat-label>
-                            <input matInput placeholder="" value="" [(ngModel)]="formData.phone" name="phone">
+                            <input type="number" matInput placeholder="" value="" [(ngModel)]="formData.phone" name="phone" >
                         </mat-form-field>
                     </div>
                 </form>
@@ -135,6 +135,11 @@
         </div>
 
 
+    </div>
+
+    <div class="paginationButtons">
+        <button class="btn btn-dark pageButton" (click)="handlePaginationPrevious()"><< Prev.. Page</button>
+        <button class="btn btn-dark pageButton" (click)="handlePaginationNext()">Next Page >></button>
     </div>
 
 </div>
