--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -7,7 +7,7 @@
 }
 
 .card {
-    width: 40%;
+    width: 100vw;
     margin: 10px; 
     // background-color: #03A9F4;
     background-color: #FFFFF7 ;
@@ -61,6 +61,7 @@ align-items: flex-end;
     padding: 30px;
     margin-right: 50px;
     align-items: flex-end;
+    margin-top: 3vw;
   .btn{
       display: flex;
       justify-content: flex-end;
@@ -237,6 +238,35 @@ width: 155px;
 .shop-icon{
     object-fit: cover;
 }
+
+.paginationButtons {
+    display: flex;
+    justify-content: flex-end;
+    position: relative;
+    bottom: 0;
+    right: 0;
+    padding: 20px;
+    margin: 20px;
+}
+
+.pageButton{
+    margin-right: 20px;
+}
+.navbar {
+    // position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000; 
+    background-color: #f8f9fa; 
+}
+
+.no-spinners::-webkit-inner-spin-button,
+.no-spinners::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+
 
 
 
