--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -19,6 +19,6 @@
 
         <!-- <a href="http://127.0.0.1:8000/accounts/login">Login </a> -->
         
-         <asl-google-signin-button>Google</asl-google-signin-button>
+         <asl-google-signin-button></asl-google-signin-button>
     </form>
 </div>
